Atualização no css. alterações visuais no form-container

--- a/cpf.css
+++ b/cpf.css
@@ -7,3 +7,18 @@ body{
     background-color: black;
     font-family: Arial;
 }
+
+.form-container{
+    background-color: aqua;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    border-radius: 5px;
+}
+
+.form-container input{
+    display: block;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
