--- a/cpf.css
+++ b/cpf.css
@@ -9,9 +9,9 @@ body{
 }
 
 .form-container{
-    background-color: aqua;
+    background-color: gold;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px gold;
     border-radius: 5px;
 }
 
@@ -21,4 +21,24 @@ body{
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
+}
+
+.form-container button{
+    padding: 10px;
+    width: 100%;
+    background-color: gold;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.message.success{
+    background-color: rgb(255, 238, 145);
+    color: rgb(255, 187, 0);
+}
+
+.message.error{
+    background-color: #f8d7da;
+    color: #721c24;
 }
