--- a/cpf.css
+++ b/cpf.css
@@ -10,8 +10,8 @@ body{
 
 .form-container{
     background-color: gold;
-    padding: 20px;
-    box-shadow: 0 0 10px gold;
+    padding: 25px;
+    box-shadow: 0 0 30px rgb(85, 85, 85);
     border-radius: 5px;
 }
 
@@ -26,8 +26,9 @@ body{
 .form-container button{
     padding: 10px;
     width: 100%;
-    background-color: gold;
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    box-shadow: 0 0 5px rgb(27, 27, 27);
     border: none;
     border-radius: 5px;
     cursor: pointer;
